# multiarg-dispatch

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
multiarg_dispatch/: __init__.py  main.py
multidispatch/: main.py  main.pyi
src/: __init__.py  multidispatch.py
tests/: test_multidispatch.py
