[project]
name = "multidispatch"
version = "0.1.0"
description = "A replacement function for single dispatch, which allows for multiple dispatch."
authors = [
    {name = "Goof Blokker",email = "goofb@live.nl"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pcs-scraper (>=0.2.0,<0.3.0)"
]

[tool.poetry]
packages = [{include = "pcp", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
mypy = "^1.15.0"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]  # Enable basic linting rules (E: pycodestyle, F: Pyflakes, I: isort)
ignore = ["E501"]  # Ignore line length violations if needed

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
allow_untyped_defs = true