[project]
name = "multiarg-dispatch"
version = "0.1.0"
description = "A replacement function for single dispatch that allows dispatching based on type hints for all arguments."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Goof Blokker", email = "goofb@live.nl"}
]
dependencies = []

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
allow_untyped_defs = true
